<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="TaskFragmentViewModel"
            type="com.example.taskschedulerapp.task.TaskFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".task.TaskFragment">

        <EditText
            android:id="@+id/descTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:hint="@string/description_field_text"
            android:maxLines="3"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/doneButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/done_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <EditText
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:hint="@string/title_field_text"
            android:maxLines="1"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/descTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/startTimeButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/start_time_button_text"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/endTimeButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/end_time_button_text"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/startTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/startTimeButton"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="11:20am" />

        <TextView
            android:id="@+id/endTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/endTimeButton"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="12:20pm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>