<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clockFragmentViewModel"
            type="com.example.taskschedulerapp.clock.ClockFragmentViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ClockFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{clockFragmentViewModel.currentDate}"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="FRIDAY, NOVEMBER 25" />

            <TextView
                android:id="@+id/todayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@{clockFragmentViewModel.dayTime}"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dayTextView"
                tools:text="Today" />

            <Switch
                android:id="@+id/themeSwitch"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="32dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.994"
                app:layout_constraintStart_toEndOf="@+id/todayTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <AnalogClock
                android:id="@+id/analogClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35000002" />


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/analogClock"
                app:layout_constraintEnd_toEndOf="@+id/analogClock"
                app:layout_constraintStart_toStartOf="@+id/analogClock"
                app:layout_constraintTop_toTopOf="@+id/analogClock">

                <TextClock
                    android:id="@+id/textClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/centralTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Next task in" />

                <TextView
                    android:id="@+id/countDownTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="___ minutes" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/analogClock"
                tools:listitem="@layout/recycle_view_item" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:contentDescription="@string/add_new_task"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/analogClock"
                app:layout_constraintEnd_toEndOf="@+id/analogClock"
                app:srcCompat="@android:drawable/ic_input_add"
                tools:ignore="ImageContrastCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/bottom_sheet_background"
            app:behavior_hideable="true"
            app:behavior_peekHeight="95dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/bottomSheetUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/secondaryColor"
                    android:contentDescription="@string/to_open_bottom_sheet"
                    android:src="@drawable/ic_baseline_keyboard_arrow_up_24" />

                <ImageButton
                    android:id="@+id/bottomSheetDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/secondaryColor"
                    android:contentDescription="@string/to_close_bottom_sheet"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/bottomSheetTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    tools:text="12:00 am to 1:00pm - Sleeping Time" />

                <TextView
                    android:id="@+id/bottomSheetDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:maxLines="12"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:typeface="serif"
                    tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>